--- a/src/routs/Player/styles.css
+++ b/src/routs/Player/styles.css
@@ -31,7 +31,7 @@
   align-items: center;
   background-color: #3B3C41;
   position: absolute;
-  bottom: 200px;
+  bottom: 147px;
   left: 0;
   right: 0;
   height: 175px;
